<resources>
    <string name="app_name">part2_chapter04</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">＋</string>
    <string name="minus">－</string>
    <string name="multi">×</string>
    <string name="divider">÷</string>
    <string name="modulo">%</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="close">닫기</string>
    <string name="historyClear">계산 기록 삭제</string>
</resources>